@@ -16,6 +16,7 @@
 		<script type="text/javascript" src="js/weapons/laser_rifle.js"></script>
 		<script type="text/javascript" src="js/buildings/abstract.js"></script>
 		<script type="text/javascript" src="js/buildings/headquarter.js"></script>
+		<script type="text/javascript" src="js/buildings/headquarter2.js"></script>
 		<script type="text/javascript" src="js/buildings/water_launch_pad.js"></script>
 		<script type="text/javascript" src="js/buildings/taelon_power_generator.js"></script>
 		<script type="text/javascript" src="js/buildings/training_facility.js"></script>
@@ -142,8 +143,8 @@
 					<div class="ext-buttons">
 						<div class="up"></div>
 						<div class="down"></div>
-						<div class="dk-button-small disable btn">
-							<img src="images/shell/texts/upgrade.png" style="padding: 7px 0 0 16px;" />
+						<div class="dk-button-small disable btn" id="upgrade_button">
+							<div class="caption"></div>
 						</div>
 						<div class="dk-button-small btn">
 							<img src="images/shell/texts/decoy.png" style="padding: 7px 0 0 22px;" />
