@@ -1,7 +1,8 @@
 AssemblyPlantBuilding.require_building = [HeadquarterBuilding];
 TrainingFacilityBuilding.require_building = [HeadquarterBuilding];
 
-HeadquarterBuilding.upgrade_require = [AssemblyPlantBuilding, TrainingFacilityBuilding];
-//HeadquarterBuilding.upgrade_to = Headquarter2Building;
+HeadquarterBuilding.upgrade_to = Headquarter2Building;
+
+Headquarter2Building.require_building = [AssemblyPlantBuilding, TrainingFacilityBuilding];
 
 CameraTowerBuilding.require_building = [HeadquarterBuilding];
