@@ -6,6 +6,8 @@ function ConstructManager(units, buildings)
 	this.current_view_type = CONST_VIEW_DEFAULT;
 	this.current_view_offset = 0;
 	
+	this._popup_ctx = $('#cell_popup').get(0).getContext('2d');
+	
 	this.recalcUnitAvailability = function()
 	{
 		var units = this._checkArrayAvailability(this.available_units);
@@ -14,8 +16,41 @@ function ConstructManager(units, buildings)
 		if (units.is_new)
 			game.notifications.addSound('new_units_available');
 		
+		this._checkUpgrade();
+		
 		if (units.is_changed || buildings.is_changed)
 			this._drawCells();
+	}
+	
+	this._checkUpgrade = function()
+	{
+		var i, j, obj, new_state, new_upgrade = false;
+		
+		for (i=0; i<this.available_buildings.length; ++i)
+		{
+			if (this.available_buildings[i].upgradable)
+			{
+				new_state = true;
+				obj = this.available_buildings[i].upgrade_to;
+				
+				for (j=0; j<obj.require_building.length; ++j)
+					if (obj.require_building[j].count == 0)
+					{
+						new_state = false;
+						break;
+					}
+					
+				if (this.available_buildings[i].can_upgrade_now != new_state)
+				{
+					this.available_buildings[i].can_upgrade_now = new_state;
+					if (new_state)
+						new_upgrade = true;
+				}
+			}
+		}
+		
+		if (new_upgrade)
+			game.notifications.addSound('upgrade_available');
 	}
 	
 	this._checkArrayAvailability = function(arr)
@@ -68,6 +103,10 @@ function ConstructManager(units, buildings)
 		this.current_view_offset = (!start) ? 0 : start;
 		this.current_view_type = CONST_VIEW_DEFAULT;
 		this._drawCells();
+		
+		//Check upgrade button state
+		if (game.selected_info.is_building && game.objects[game.selected_objects[0]]._proto.upgradable)
+			$('#upgrade_button').removeClass('disable');
 	}
 	
 	this.drawBuildings = function(start)
@@ -95,7 +134,8 @@ function ConstructManager(units, buildings)
 						this._drawCell(
 							i-this.current_view_offset, 
 							'images/units/' + this.available_units[i].resource_key + '/box.png', 
-							this.available_units[i].enabled
+							this.available_units[i].enabled,
+							!this._canSelectedProduce(this.available_units[i])
 						);
 						if (this.available_units[i].construction_queue > 0)
 							this._canvasRedraw(this.current_view_offset-i);
@@ -108,11 +148,20 @@ function ConstructManager(units, buildings)
 						this._drawCell(
 							i-this.current_view_offset, 
 							'images/buildings/' + this.available_buildings[i].res_key + '/box.png', 
-							this.available_buildings[i].enabled
+							this.available_buildings[i].enabled,
+							false
 						);
 					break;
 			}
 		}
+	}
+	
+	this._canSelectedProduce = function(obj)
+	{
+		if (game.selected_info.is_building)
+			return (game.objects[game.selected_objects[0]]._proto == obj.construction_building);
+		
+		return true;
 	}
 	
 	this._drawCellEmpty = function(cell)
@@ -120,9 +169,15 @@ function ConstructManager(units, buildings)
 		$('#unit_box'+cell).css('background-image', 'url(images/units/empty_unit_box.png)');
 	}
 	
-	this._drawCell = function(cell, path, enabled)
+	this._drawCell = function(cell, path, enabled, is_blue)
 	{
-		var style = enabled ? '-45px 2px' : '9px 2px';
+		var style;
+			
+		if (enabled)
+			style = (is_blue) ? '-99px 2px' : '-45px 2px';
+		else
+			style = '9px 2px';
+		
 		$('#unit_box'+cell).css({
 			'background-image': 'url('+path+')',
 			'background-position': style
@@ -132,11 +187,13 @@ function ConstructManager(units, buildings)
 	this.removeCellSelection = function()
 	{
 		$('.unit-image.active').removeClass('active');
+		$('#upgrade_button').addClass('disable');
+		$('#cell_popup').hide();
 	}
 	
 	this.cellClick = function(cell_id)
 	{
-		var i = this.current_view_offset + parseInt(cell_id);
+		var i = this.current_view_offset + parseInt(cell_id), obj;
 		
 		if (this.current_view_type == CONST_VIEW_BUILDINGS)
 		{
@@ -180,12 +237,19 @@ function ConstructManager(units, buildings)
 				return;
 			}
 			
-			var obj = this._findCompatibleInstance(this.available_units[i].construction_building);
-			if (obj === null)
+			if (game.selected_objects.length==1 && game.selected_info.is_building)
 			{
-				console.log('Construction error: Can not find compatible instance');
-				return;
+				if (!this._canSelectedProduce(this.available_units[i]))
+					return;
+				obj = game.objects[game.selected_objects[0]];
 			}
+			else
+				obj = this._findCompatibleInstance(this.available_units[i].construction_building);
+			
+			if (obj === null)
+				return;
+			
+			console.log('Add for producing: ' + obj.uid);
 			obj.produce(this.available_units[i]);
 			this.available_units[i].construction_queue++;
 		}
@@ -204,11 +268,9 @@ function ConstructManager(units, buildings)
 	
 	this.cellPopupPrepere = function(cell_id)
 	{
-		var MAX_X = 400, MAX_Y = 200;
-		var i = this.current_view_offset + parseInt(cell_id), ctx = $('#cell_popup').get(0).getContext('2d'), obj, text;
+		var i = this.current_view_offset + parseInt(cell_id), obj;
 		
-		//Clear popup anyway
-		ctx.clearRect(0, 0, MAX_X, MAX_Y);
+		this._clearPopup();
 		
 		if (this.current_view_type == CONST_VIEW_BUILDINGS)
 		{
@@ -225,28 +287,48 @@ function ConstructManager(units, buildings)
 			obj = this.available_units[i];
 		}
 		
+		this._drawPopup(obj);
+	}
+	
+	this.upgradePopupPrepere = function()
+	{
+		this._clearPopup();
+		if (game.selected_info.is_building && game.objects[game.selected_objects[0]]._proto.upgradable)
+			this._drawPopup(game.objects[game.selected_objects[0]]._proto.upgrade_to);
+	}
+	
+	this._clearPopup = function()
+	{
+		this._popup_ctx.clearRect(0, 0, 400, 200);
+	}
+	
+	this._drawPopup = function(obj)
+	{
+		var MAX_X = 400, MAX_Y = 200;
+		var i, text;
+		
 		text = obj.obj_name + ' ' + obj.cost + 'c';
 		
 		//Draw name
 		var text_size = game.fontDraw.getSize(text) + 4, left = MAX_X - text_size - 13;
 		
-		ctx.fillStyle = '#07f4ff';
-		ctx.fillRect(MAX_X - 15 - text_size, 0, text_size + 2, 18);
-		ctx.fillStyle = '#000000';
-		ctx.fillRect(MAX_X - 14 - text_size, 1, text_size, 16);
+		this._popup_ctx.fillStyle = '#07f4ff';
+		this._popup_ctx.fillRect(MAX_X - 15 - text_size, 0, text_size + 2, 18);
+		this._popup_ctx.fillStyle = '#000000';
+		this._popup_ctx.fillRect(MAX_X - 14 - text_size, 1, text_size, 16);
 		
-		ctx.lineWidth = 1;
-		ctx.strokeStyle = '#07b4b4';
+		this._popup_ctx.lineWidth = 1;
+		this._popup_ctx.strokeStyle = '#07b4b4';
 		
-		ctx.beginPath();
-		ctx.moveTo(MAX_X - 15 - text_size, 17.5);
-		ctx.lineTo(MAX_X - 13.5, 17.5);
-		ctx.lineTo(MAX_X - 13.5, 0);
-		ctx.moveTo(MAX_X - 13.5, 10.5);
-		ctx.lineTo(MAX_X, 10.5);
-		ctx.stroke();
+		this._popup_ctx.beginPath();
+		this._popup_ctx.moveTo(MAX_X - 15 - text_size, 17.5);
+		this._popup_ctx.lineTo(MAX_X - 13.5, 17.5);
+		this._popup_ctx.lineTo(MAX_X - 13.5, 0);
+		this._popup_ctx.moveTo(MAX_X - 13.5, 10.5);
+		this._popup_ctx.lineTo(MAX_X, 10.5);
+		this._popup_ctx.stroke();
 		
-		game.fontDraw.drawOnCanvas(text, ctx, MAX_X - 12.5 - text_size, 2.5, 'green');
+		game.fontDraw.drawOnCanvas(text, this._popup_ctx, MAX_X - 12.5 - text_size, 2.5, 'green');
 		
 		//Draw required
 		var texts = [], max_text_size = 0;
@@ -270,22 +352,22 @@ function ConstructManager(units, buildings)
 		max_text_size += 4;
 		var box_height = texts.length*15 + 3;
 		
-		ctx.fillStyle = '#07f4ff';
-		ctx.fillRect(left - 15 - max_text_size, 0, max_text_size + 2, box_height);
-		ctx.fillStyle = '#000000';
-		ctx.fillRect(left - 14 - max_text_size, 1, max_text_size, box_height - 2);
+		this._popup_ctx.fillStyle = '#07f4ff';
+		this._popup_ctx.fillRect(left - 15 - max_text_size, 0, max_text_size + 2, box_height);
+		this._popup_ctx.fillStyle = '#000000';
+		this._popup_ctx.fillRect(left - 14 - max_text_size, 1, max_text_size, box_height - 2);
 		
-		ctx.strokeStyle = '#07b4b4';
-		ctx.beginPath();
-		ctx.moveTo(left - 15 - max_text_size, box_height - 0.5);
-		ctx.lineTo(left - 13.5, box_height - 0.5);
-		ctx.lineTo(left - 13.5, 0.5);
-		ctx.moveTo(left - 13.5, 10.5);
-		ctx.lineTo(left - 2, 10.5);
-		ctx.stroke();
+		this._popup_ctx.strokeStyle = '#07b4b4';
+		this._popup_ctx.beginPath();
+		this._popup_ctx.moveTo(left - 15 - max_text_size, box_height - 0.5);
+		this._popup_ctx.lineTo(left - 13.5, box_height - 0.5);
+		this._popup_ctx.lineTo(left - 13.5, 0.5);
+		this._popup_ctx.moveTo(left - 13.5, 10.5);
+		this._popup_ctx.lineTo(left - 2, 10.5);
+		this._popup_ctx.stroke();
 		
 		for (i=0; i<texts.length; ++i)
-			game.fontDraw.drawOnCanvas(texts[i], ctx, left - 12.5 - max_text_size, i*15 + 2.5, 'red');
+			game.fontDraw.drawOnCanvas(texts[i], this._popup_ctx, left - 12.5 - max_text_size, i*15 + 2.5, 'red');
 	}
 	
 	
